<resources>
    <string name="app_name">Ticket-Reservation-System</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_bookings">Bookings</string>
    <string name="navigation_profile">Profile</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="nic_field">NIC or Passport Number</string>
    <string name="password_field">Enter your password</string>
    <string name="password_hint_field">Min 8 characters</string>
    <string name="nic_hint_field">xxxxxxxxxxx</string>
    <string name="name_field">Name</string>
    <string name="name_hint_field">Amila Devin</string>
    <string name="email_field">Email</string>
    <string name="email_hint_field">example@gmail.com</string>
    <string name="contactNumber_field">Contact Number</string>
    <string name="contactNumber_hint_field">07xxxxxxxx</string>
    <string name="create_password_field">Create new password</string>
    <string name="retype_password_field">Re-type password</string>
    <string name="sign_in_label"></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_new_account">Create New Account</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit</string>
    <string name="deactivate">Deactive</string>
    <string name="logout">Log Out</string>
    <string name="start_station">Start Station</string>
    <string name="end_station">End Station</string>
    <string name="select_date">Select date</string>
    <string name="search">Search</string>
    <string name="train_schedule">Train Schedule</string>
    <string name="start_station_hint">Enter your start station</string>
    <string name="end_station_hint">Enter your end station</string>
    <string name="my_bookings">My Bookings</string>
    <string name="book_now">Book Now</string>
    <string name="request_agent">Request Agent</string>
    <string name="booking_hint">Enter number of tickets</string>
    <string name="nic_prompt">Your NIC</string>
    <string name="password_prompt">Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account_prompt">Create New Account ?</string>
    <string name="sign_up_prompt">Sign Up</string>
    <string name="logo">logo</string>
    <string name="register_now">Register Now</string>
    <string name="your_name_prompt">Your Name</string>
    <string name="your_email_prompt">Your Email</string>
    <string name="your_contact_no_prompt">Your Contact Number</string>
    <string name="your_new_password_prompt">Your New Password</string>
    <string name="re_type_your_password">Re-Type Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="ticket_express">Ticket Express</string>
    <string name="greeting">Welcome! To get started, you can either create a new account or sign in if you already have one</string>
    <string name="slogan">skip the lines and book online</string>
    <string name="route_name">Route Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="activate">Activate</string>
    <string name="train_name">Train Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>