<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_family"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textStyle="bold
"
                >

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/name_field"
                android:fontFamily="@font/poppins_family"
                android:id="@+id/name">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/email_field"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_family"
                android:id="@+id/email">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/nic_field"
                android:fontFamily="@font/poppins_family"
                android:id="@+id/nic">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/contactNumber_field"
                android:inputType="phone"
                android:fontFamily="@font/poppins_family"
                android:id="@+id/contact">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/password_field"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_family"
                android:id="@+id/password">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/retype_password_field"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_family"
                android:id="@+id/re_password">

            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_signUp"
                android:layout_gravity="right"
                android:padding="18dp"
                app:cornerRadius="15dp"
                android:layout_marginBottom="5dp"
                android:textAllCaps="true"
                android:text="@string/sign_up_button">

            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:text="@string/already_have_an_account"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_family"/>

            <Button
                android:id="@+id/signInReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/button"
                android:textAllCaps="true"
                android:background="@android:color/transparent"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                app:cornerRadius="0dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_family"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>