<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="100">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train_schedule"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e8e8e8"
            android:elevation="10dp"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/start_station"
                android:fontFamily="@font/poppins_family"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/start_station_hint"
                android:id="@+id/from"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_family"
                android:text="@string/end_station"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/end_station_hint"
                android:id="@+id/to"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_family"
                    android:text="@string/select_date"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingLeft="5dp"/>

                <ImageView
                    android:layout_width="50dp"
                    android:id="@+id/calender"
                    android:layout_height="50dp"
                    android:src="@drawable/calender"
                    android:layout_weight="2"/>
            </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search"
            android:fontFamily="@font/poppins_family"
            android:text="@string/search"
            app:cornerRadius="15dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false">
        </Button>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/trainList"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>