<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.BookingActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_now"
        android:fontFamily="@font/poppins_family"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e8e8e8"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:id="@+id/name"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/route_name"
                android:textSize="20dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:id="@+id/from"
                android:hint="@string/from"
                android:fontFamily="@font/poppins_family"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:id="@+id/to"
                android:hint="@string/to"
                android:fontFamily="@font/poppins_family"
                android:textSize="16dp">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:hint="">

            </EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2"
                android:layout_height="80dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/book"
                    android:text="@string/book_now"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/poppins_family"
                    android:textAllCaps="false"
                    android:layout_weight="1"></Button>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/request"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_family"
                    android:text="@string/request_agent"
                    android:layout_weight="1"></Button>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>