<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/welcomeLogo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/ticket_express" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnimationView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loader"/>

        <TextView
            android:id="@+id/version_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>